first lecture finished

--- a/week3/main.tex
+++ b/week3/main.tex
@@ -43,4 +43,28 @@ Adding them together equals the right hand side. They are evaluating the same th
 \newline
 Q.E.D.
 
+\section{Wed Lec, 4b}
+Let people be the pigeons and each letter is a different hole.
+\newline
+Number of pigeons = number of names = 33
+\newline
+Number of holes = number of letters - 30
+\newline
+Since the amount of pigeons is greater than the amount of holes, some hole must have at least 2 pigeons by PHP. Therefore some ending letter must be shared by at least 2 names.
+
+\section{Wed Lec, 5}
+
+\subsection{a}
+We can form a segment from any two points. So the total amount of segments is $\binom{50}{2} = \frac{50!}{2!48!}=1225$
+
+\subsection{b}
+Since no three points are colinear, we can choose any 3 points to form a triangle. So the total amount is $\binom{50}{3} = \frac{50!}{3!47!} = 19600$
+
+\subsection{c}
+Similar to part (b), we choose any 4 points to form a quadrilateral. The total amount is $\binom {50} {4} = \frac{50!}{46!4!} = 230300$.
+
+
+
+
+
 \end{document}
