--- a/week3/main.tex
+++ b/week3/main.tex
@@ -16,7 +16,7 @@
 
 \author{Tianshuang (Ethan) Qiu}
 \begin{document}
-\title{Math 104}
+\title{Math 74, Week 3}
 \maketitle
 
 \section{Wed Lec, 1a}
