--- a/week4/main.tex
+++ b/week4/main.tex
@@ -98,7 +98,7 @@ Solving the above equation yields $x=1$.
 \newpage
 
 
-\section{Wed Lec, 2b}
+\section{Lec Wed, 2b}
 \begin{figure}[h]
     \includegraphics[width = 100mm]{GRAPH3.png}
 \end{figure}
@@ -119,20 +119,20 @@ Since $GE = \frac{1}{2}FB = \frac{1}{2}AF$, $AF = FB$. Therefore all three media
 
 \section{Dis Wed, 1a}
 \begin{figure}[h]
-    \includegraphics[width = 100mm]{GRAPH4.png}
+    \includegraphics[width = 100mm]{GRAPH7.png}
 \end{figure}
-Connect $JB$.
+Since these are all squares we have $DA = AM = BC = CJ$. And since $DM$ connects the diagonal of a square, $\angle DMA = \angle ADM = 45 \degrees$.
 \newline
-We first prove a congruency between two right triangles. Since these are all squares we have $DA = AM = BC = CJ$, and $\angle DAM = \angle BCJ = 90 \degrees$. Therefore $\triangle DAM \cong JCB$ by SAS congruency.
+Let $DA$ have length $x$, then $DM$ would have length $\sqrt 2 x$. Since $\angle DMA = 45 \degrees$, its compliment $\angle DMH = 135 \degrees$. $MB$ has length $2x$, and $DM$ has length $x$.
 \newline
-Therefore $\angle DMA = \angle CBJ = \angle BCJ = 45 \degrees$ due to the triangle being isosceles and right. Let $DA$ have length $x$, then $DM$ would have length $\sqrt 2$. Since $\angle DMA = 45 \degrees$, its compliment $\angle DMH = 135 \degrees$. Similarly, $\angle BJC$'s compliment $\angle BJD = 135 \degrees$. $DJ$ has length 2x, and $JB$ has length $\sqrt 2$.
+$\frac{MH}{DM} = \frac{DM}{MB} = \frac{1}{\sqrt2}$, and since $\triangle DMH, \triangle BMD$ both have angle DMH, $\triangle DMH \sim \triangle BMD$ (RAR similarity), and $\angle DHM = \angle BDM$.
 \newline
-$\frac{MH}{JB} = \frac{DM}{DJ}$, and since the $\angle DMH = \angle BJD = 135 \degrees$, $\triangle DMH \sim \triangle DJB$ (RAR similarity), and $\angle DHM = \angle JBD$.
+Now we prove a congruency between two right triangles. From the squares we have $AD = CB = x$,  $CD = AB = 3x$, and $\angle DAB = \angle BCD = 90 \degrees$, so $\triangle DAB \cong \triangle BCD$ by SAS congruency. Therefore $\angle ABD = \angle BDC$
 \newline
-Thus we have moved all three angles into the right angle $\angle HBC$, proving that the sum of these three angles is $90 \degrees$. Q.E.D.
+Thus we have moved all three angles into the right angle $\angle ADC$, proving that the sum of these three angles is $90 \degrees$. Q.E.D.
 \newpage
 
-\section{Wed Dis, 3b}
+\section{Dis Wed, 3b}
 \begin{figure}[h]
     \includegraphics[width = 100mm]{GRAPH6.png}
 \end{figure}
@@ -144,7 +144,7 @@ Since $a \parallel AB$, we have $\angle BAC = \angle DCE$, and $\angle ABC = \an
 \newpage
 
 
-\section{Fri Lec, 3}
+\section{Lec Fri, 3}
 If the 5th postulate was indeed redundant (provable from others), then the 4 postulates alone must always define the Euclidean space, and that there should be no other spaces that could follow the first 4 postulates but not the fifth.
 \newline
 Hyperbolic geometry satisfies the first 4 with its own definitions of lines, circles, and right angles. The resulting space does not follow Euclid's 5th postulate: two lines whose sum of the inner angles on one side is less than $180 \degrees$ can still curve away from each other and never intersect.
@@ -153,7 +153,7 @@ This shows that we need Euclid's 5th postulate to properly define a Euclidean sp
 \newpage
 
 
-\section{Fri Lec, 4b}
+\section{Lec Fri, 4b}
 Let us label "There is at most 1 parallel line to a given line $l$ through a given point $P$" "Statement A", and "two lines that are parallel to  the same line are also parallel to eachother" "Statement B".
 \newline
 For this problem we need to prove that $A \iff B$. We will begin by proving $A \implies B$.
