--- a/week5/main.tex
+++ b/week5/main.tex
@@ -151,8 +151,8 @@ Base case: $n=1$, $1^3 = (1\times2/2)^2 = 1$, base case holds.
 Inductive case: Assume that $$1^3 + 2^3 + ... + n^3 = (\frac{n(n+1)}{2})^2$$
 for some $n \geq 1$, consider
 $1^3 + 2^3 + ... + n^3 + (n+1)^3$, we can apply our inductive hypothesis to get
-$$ = (\frac{n(n+1)}{2})^2 + (n+1)^3 = \frac{n^2(n+1)^2}{4} + (n+1)^3 + \frac{n^2(n+1)^2+4(n+1)^3}{4}$$
-$$\frac{(n+1)^2(n^2+4(n+1))}{4} = \frac{(n+1)^2(n^2+4n+4)}{4} = (\frac{(n+1)^2(n+2)^2}{2^2})$$
+$$ = (\frac{n(n+1)}{2})^2 + (n+1)^3 = \frac{n^2(n+1)^2}{4} + (n+1)^3 = \frac{n^2(n+1)^2+4(n+1)^3}{4}$$
+$$= \frac{(n+1)^2(n^2+4(n+1))}{4} = \frac{(n+1)^2(n^2+4n+4)}{4} = (\frac{(n+1)^2(n+2)^2}{2^2})$$
 The expression above is exactly what we would expect if we subsitute $(n+1)$ for $n$ in $(\frac{n(n+1)}{2})^2$. Therefore we have proven the inductive case. Q.E.D.
 
 \section{Wed Dis, 4a}
@@ -165,8 +165,24 @@ The expression above is exactly what we would expect if we subsitute $(n+1)$ for
 
 
 \section{Fri Lec, 2b}
+$n! < n^n \forall n \geq 2$
+\newline
+Base case: $n=2, n!=2, n^n=4, n! < n^n$, base case holds.
+\newline
+Inductive case: assume that $n! < n^n$ for some $n \geq 2$, consider $(n+1)!, (n+1)^{n+1}$. By the definition of factorials we have $(n+1)! = (n+1)n! < (n+1)n^n$
+\newline
+Now, consider $(n+1)n^n, (n+1)^{n+1}$. Since the latter is $n+1$ multiplied by itself $n+1$ times, and the former only has $n+1$ once and $n$ n times, and since $n<n+1$, we have $(n+1)n^n < (n+1)^{n+1}$.
+\newline
+Now we can put it all together: $(n+1)! = (n+1)n! < (n+1)n^n < (n+1)^{n+1}$. Thus we have proven the inductive case. Q.E.D.
 
 \section{Fri Lec, 3a}
+Base case: $n = 0, n^3-n = 0, n \bmod 6 \equiv 0$ Base case holds.
+\newline
+Inductive case: assume that $(n^3-n) \mid 6$ for some $n \geq 0$, consider $(n+1)^3-(n+1)$.
+$$= n^3 + 3n^2 + 3n + 1 - n -1 = n^3+3n^2+2n = n(n^2+3n+2) = n(n+1)(n+2)$$
+Integers that are divisible by 2 are spaced such that there is one every other, and those divisible by 3 are spaced such that there is one every third. Here we have a product of 3 consecutive integers, so there must be at least 1 integer between $n, n+1, n+2$ that is divisible by 2, and at least 1 that is divisible by 3. Since $6=2 \times 3$, we have $n(n+1)(n+2) \mid 6$.
+\newline
+We have proven the inductive case. Q.E.D.
 
 \section{Fri Lec, 3b}
 
